--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Privacy Policy</h1>
-    <p>Last updated: [Date]</p>
+    <p>Last updated: 04/10/2025</p>
     
     <h2>Information We Collect</h2>
     <p>This application processes Instagram comments to provide automated responses. We collect:</p>
@@ -27,6 +27,6 @@
     <p>We do not store any Instagram user data permanently. Data is processed in real-time and discarded immediately after processing.</p>
     
     <h2>Contact</h2>
-    <p>For questions about this Privacy Policy, contact us at: [your-email@example.com]</p>
+    <p>For questions about this Privacy Policy, contact us at: ivantitestemail31@gmail.com</p>
 </body>
 </html>
