--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -25,6 +25,6 @@
     <p>We reserve the right to modify these terms at any time.</p>
     
     <h2>Contact</h2>
-    <p>Questions? Contact us at: [your-email@example.com]</p>
+    <p>Questions? Contact us at: ivantitestemail31@gmail.com</p>
 </body>
 </html>
